--- a/PotterShoppingCart/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
+++ b/PotterShoppingCart/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
@@ -53,8 +53,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Book.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="PotterShoppingCartTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingCart.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="User Story.txt" />
